--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,21 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./:/var/www/html
+      - ./:/docker/
+    volumes_from:
+      - storage
+  postgres:
+    build:
+      context: docker/postgres/
+      dockerfile: Postgres-9.5.Dockerfile
+    ports:
+      - 15432:5432
+    volumes_from:
+      - storage
+    env_file:
+      - etc/environment.yml
+  storage:
+    build:
+      context: docker/storage/
+    volumes:
+      - /storage
