--- a/humbug.json.dist
+++ b/humbug.json.dist
@@ -2,6 +2,9 @@
     "source": {
         "directories": [
             "src"
+        ],
+        "excludes": [
+            "Tests"
         ]
     },
     "timeout": 10,
