--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,20 @@
 version: '2'
+networks:
+  prodnetwork:
+    driver: bridge
 services:
   app:
     build:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - ./:/var/www/html
+      - ./:/opt/project/
       - ./:/docker/
     volumes_from:
       - storage
+    links:
+      - sonarqube
+      - sonar-scanner
   storage:
     build:
       context: docker/storage/
@@ -16,8 +22,27 @@ services:
       - /storage
   sonarqube:
     build:
-      context: .
-      dockerfile: docker/sonarqube/Dockerfile
+      context: docker/sonarqube/
+      dockerfile: Dockerfile
     ports:
-      - "9000:9000"
+      - "9001:9000"
       - "443"
+    networks:
+      - prodnetwork
+  sonar-scanner:
+      build:
+        context: docker/sonar-scanner/
+        dockerfile: Dockerfile
+      volumes:
+        - ./:/opt/project/
+      links:
+        - sonarqube
+      networks:
+        - prodnetwork
+      depends_on:
+        - sonarqube
+      environment:
+       - SONAR_HOST_URL=http://localhost:9000
+       - SONAR_PROJECT_KEY=ddd:blog
+       - SONAR_PROJECT_NAME=DDDBlog
+       - SONAR_PROJECT_VERSION=0.1.1
