--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       build:
         context: docker/sonar-scanner/
         dockerfile: Dockerfile
+      command: ["./docker/sonar-scanner/wait-for-it.sh", "http://172.17.0.1:9001"]
       volumes:
         - ./:/opt/project/
       links:
@@ -42,7 +43,7 @@ services:
       depends_on:
         - sonarqube
       environment:
-       - SONAR_HOST_URL=http://localhost:9000
+       - SONAR_HOST_URL=http://172.17.0.1:9001
        - SONAR_PROJECT_KEY=ddd:blog
        - SONAR_PROJECT_NAME=DDDBlog
        - SONAR_PROJECT_VERSION=0.1.1
