--- a/docker/sonar-scanner/Dockerfile
+++ b/docker/sonar-scanner/Dockerfile
@@ -1,2 +1,4 @@
-FROM mercuriete/sonar-scanner:onbuild
-CMD ["sonar-scanner", "-X"]
+FROM mercuriete/sonar-scanner
+
+WORKDIR /opt/project
+CMD sonar-scanner -Dsonar.host.url=$SONAR_HOST_URL -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.projectName=$SONAR_PROJECT_NAME -Dsonar.projectVersion=$SONAR_PROJECT_VERSION -Dsonar.sources=/opt/project/src/Blog
