--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,21 +29,21 @@ services:
       - "443"
     networks:
       - prodnetwork
-  sonar-scanner:
-      build:
-        context: docker/sonar-scanner/
-        dockerfile: Dockerfile
-      command: ["./docker/sonar-scanner/wait-for-it.sh", "http://172.17.0.1:9001"]
-      volumes:
-        - ./:/opt/project/
-      links:
-        - sonarqube
-      networks:
-        - prodnetwork
-      depends_on:
-        - sonarqube
-      environment:
-       - SONAR_HOST_URL=http://172.17.0.1:9001
-       - SONAR_PROJECT_KEY=ddd:blog
-       - SONAR_PROJECT_NAME=DDDBlog
-       - SONAR_PROJECT_VERSION=0.1.1
+#  sonar-scanner:
+#      build:
+#        context: docker/sonar-scanner/
+#        dockerfile: Dockerfile
+#      command: ["./wait-for-it.sh", "http://172.17.0.1:9001"]
+#      volumes:
+#        - ./:/opt/project/
+#      links:
+#        - sonarqube
+#      networks:
+#        - prodnetwork
+#      depends_on:
+#        - sonarqube
+#      environment:
+#       - SONAR_HOST_URL=http://172.17.0.1:9001
+#       - SONAR_PROJECT_KEY=ddd:blog
+#       - SONAR_PROJECT_NAME=DDDBlog
+#       - SONAR_PROJECT_VERSION=0.1.1
