--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ php:
 # execute any number of scripts before the test run, custom env's are available as variables
 before_script:
   - composer install -o
+  - cp sonar-project.properties.dist sonar-project.properties
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
