--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ addons:
           - feature/PostMustHaveAnAuthor
 script:
   # other script steps might be done before running the actual SonarQube analysis
-  - sonar-scanner
+  - sonar-scanner -X
 
 # configure notifications (email, IRC, campfire etc)
 notifications:
