updated travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ php:
   # aliased to a recent 7.x version
   - 7.0
 #
-
+before_install:
+  - export JAVA_HOME=/usr/lib/jvm/java-8-oracle
 # execute any number of scripts before the test run, custom env's are available as variables
 before_script:
   - composer install -o
