--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 
 # omitting "script:" will default to phpunit
 # use the $DB env variable to determine the phpunit.xml to use
-script: phpunit --configuration phpunit.xml
+script: php vendor/phpunit/phpunit/phpunit -c phpunit.xml --group=application,domain
 
 addons:
   apt:
