--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,15 @@ before_script:
   - composer install -o
   - cp sonar-project.properties.dist sonar-project.properties
 addons:
-#  apt:
-#    packages:
-#      - oracle-java8-set-default
+  apt:
+    packages:
+      - oracle-java8-set-default
   sonarqube:
     organization: "patorojomareado" # the key of the org you chose at step #3
     branches:
           - master
           - develop
 script:
-  # other script steps might be done before running the actual SonarQube analysis
   - php vendor/phpunit/phpunit/phpunit -c phpunit.xml --group=application,domain
   - sonar-scanner -X
 
